--- a/Effective C++/Effective C++.vcxproj
+++ b/Effective C++/Effective C++.vcxproj
@@ -142,7 +142,17 @@
     <ClCompile Include="1.cpp" />
     <ClCompile Include="10,11.cpp" />
     <ClCompile Include="12.cpp" />
+    <ClCompile Include="13.cpp" />
+    <ClCompile Include="14.cpp" />
+    <ClCompile Include="15.cpp" />
+    <ClCompile Include="16.cpp" />
+    <ClCompile Include="17.cpp" />
+    <ClCompile Include="18.cpp" />
+    <ClCompile Include="19.cpp" />
     <ClCompile Include="2.cpp" />
+    <ClCompile Include="20.cpp" />
+    <ClCompile Include="21.cpp" />
+    <ClCompile Include="22.cpp" />
     <ClCompile Include="3.cpp" />
     <ClCompile Include="4.cpp" />
     <ClCompile Include="5.cpp" />
