--- a/Effective C++/Effective C++.vcxproj
+++ b/Effective C++/Effective C++.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="29.cpp" />
     <ClCompile Include="1.cpp" />
     <ClCompile Include="10,11.cpp" />
     <ClCompile Include="12.cpp" />
@@ -157,6 +158,8 @@
     <ClCompile Include="24.cpp" />
     <ClCompile Include="25.cpp" />
     <ClCompile Include="26.cpp" />
+    <ClCompile Include="27.cpp" />
+    <ClCompile Include="28.cpp" />
     <ClCompile Include="3.cpp" />
     <ClCompile Include="4.cpp" />
     <ClCompile Include="5.cpp" />
