--- a/Effective C++/Effective C++.vcxproj.filters
+++ b/Effective C++/Effective C++.vcxproj.filters
@@ -105,5 +105,14 @@
     <ClCompile Include="26.cpp">
       <Filter>源文件\5.实现</Filter>
     </ClCompile>
+    <ClCompile Include="27.cpp">
+      <Filter>源文件\5.实现</Filter>
+    </ClCompile>
+    <ClCompile Include="28.cpp">
+      <Filter>源文件\5.实现</Filter>
+    </ClCompile>
+    <ClCompile Include="29.cpp">
+      <Filter>源文件\5.实现</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
