--- a/Effective C++/Effective C++.vcxproj
+++ b/Effective C++/Effective C++.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="27.cpp" />
     <ClCompile Include="28.cpp" />
     <ClCompile Include="3.cpp" />
+    <ClCompile Include="30.cpp" />
     <ClCompile Include="4.cpp" />
     <ClCompile Include="5.cpp" />
     <ClCompile Include="6.cpp" />
