--- a/Effective C++/Effective C++.vcxproj.filters
+++ b/Effective C++/Effective C++.vcxproj.filters
@@ -114,5 +114,8 @@
     <ClCompile Include="29.cpp">
       <Filter>源文件\5.实现</Filter>
     </ClCompile>
+    <ClCompile Include="30.cpp">
+      <Filter>源文件\5.实现</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
