--- a/Effective C++/Effective C++.vcxproj
+++ b/Effective C++/Effective C++.vcxproj
@@ -162,12 +162,19 @@
     <ClCompile Include="28.cpp" />
     <ClCompile Include="3.cpp" />
     <ClCompile Include="30.cpp" />
+    <ClCompile Include="31Person.cpp" />
+    <ClCompile Include="31RealPerson.cpp" />
     <ClCompile Include="4.cpp" />
     <ClCompile Include="5.cpp" />
+    <ClCompile Include="31.cpp" />
     <ClCompile Include="6.cpp" />
     <ClCompile Include="7.cpp" />
     <ClCompile Include="8.cpp" />
     <ClCompile Include="9.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="31Person.h" />
+    <ClInclude Include="31RealPerson.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
