--- a/Effective C++/Effective C++.vcxproj.filters
+++ b/Effective C++/Effective C++.vcxproj.filters
@@ -117,5 +117,22 @@
     <ClCompile Include="30.cpp">
       <Filter>源文件\5.实现</Filter>
     </ClCompile>
+    <ClCompile Include="31.cpp">
+      <Filter>源文件\5.实现</Filter>
+    </ClCompile>
+    <ClCompile Include="31Person.cpp">
+      <Filter>源文件\5.实现</Filter>
+    </ClCompile>
+    <ClCompile Include="31RealPerson.cpp">
+      <Filter>源文件\5.实现</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="31Person.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="31RealPerson.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
