--- a/Effective C++/Effective C++.vcxproj
+++ b/Effective C++/Effective C++.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="34.cpp" />
     <ClCompile Include="29.cpp" />
     <ClCompile Include="1.cpp" />
     <ClCompile Include="10,11.cpp" />
@@ -164,6 +165,9 @@
     <ClCompile Include="30.cpp" />
     <ClCompile Include="31Person.cpp" />
     <ClCompile Include="31RealPerson.cpp" />
+    <ClCompile Include="32.cpp" />
+    <ClCompile Include="33.cpp" />
+    <ClCompile Include="36.cpp" />
     <ClCompile Include="4.cpp" />
     <ClCompile Include="5.cpp" />
     <ClCompile Include="31.cpp" />
