--- a/Effective C++/Effective C++.vcxproj
+++ b/Effective C++/Effective C++.vcxproj
@@ -167,8 +167,13 @@
     <ClCompile Include="31RealPerson.cpp" />
     <ClCompile Include="32.cpp" />
     <ClCompile Include="33.cpp" />
+    <ClCompile Include="35.cpp" />
     <ClCompile Include="36.cpp" />
+    <ClCompile Include="37.cpp" />
+    <ClCompile Include="38.cpp" />
+    <ClCompile Include="39.cpp" />
     <ClCompile Include="4.cpp" />
+    <ClCompile Include="40.cpp" />
     <ClCompile Include="5.cpp" />
     <ClCompile Include="31.cpp" />
     <ClCompile Include="6.cpp" />
