--- a/Effective C++/Effective C++.vcxproj
+++ b/Effective C++/Effective C++.vcxproj
@@ -174,6 +174,8 @@
     <ClCompile Include="39.cpp" />
     <ClCompile Include="4.cpp" />
     <ClCompile Include="40.cpp" />
+    <ClCompile Include="41.cpp" />
+    <ClCompile Include="42.cpp" />
     <ClCompile Include="5.cpp" />
     <ClCompile Include="31.cpp" />
     <ClCompile Include="6.cpp" />
