--- a/Effective C++/Effective C++.vcxproj
+++ b/Effective C++/Effective C++.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="40.cpp" />
     <ClCompile Include="41.cpp" />
     <ClCompile Include="42.cpp" />
+    <ClCompile Include="43.cpp" />
     <ClCompile Include="5.cpp" />
     <ClCompile Include="31.cpp" />
     <ClCompile Include="6.cpp" />
