--- a/Effective C++/Effective C++.vcxproj
+++ b/Effective C++/Effective C++.vcxproj
@@ -180,9 +180,12 @@
     <ClCompile Include="44.cpp" />
     <ClCompile Include="45.cpp" />
     <ClCompile Include="46.cpp" />
+    <ClCompile Include="47.cpp" />
+    <ClCompile Include="48.cpp" />
     <ClCompile Include="49.cpp" />
     <ClCompile Include="5.cpp" />
     <ClCompile Include="31.cpp" />
+    <ClCompile Include="50.cpp" />
     <ClCompile Include="6.cpp" />
     <ClCompile Include="7.cpp" />
     <ClCompile Include="8.cpp" />
